# ruuvi2iotcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  example_config.json  example_gateway_config.json  log4rs.yaml  ruuvi2iotcore.toml  ruuvi2iotcore.yaml
.cargo/: config.toml
.github/: dependabot.yml
.rpm/: .gitignore  ruuvi2iotcore.spec
ruuvitag-dataformat/: Cargo.toml
ruuvitag-dataformat/src/: lib.rs  v5.rs
ruuvitag-parser/: Cargo.toml
src/: configfile.rs  iotcore.rs  jwt.rs  main.rs  scanner.rs
src/lib/: config.rs  configfile.rs  dnsconfig.rs  iotcore.rs  jwt.rs  mod.rs  ruuvi.rs  scanner.rs
