[package]
name = "ruuvi2iotcore"
version = "0.2.2"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
edition = "2018"
description = "Ruuvi tag beacons to GCP iot core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
clap = "2.33.3"
directories = "3.0.1"
dotenv = "0.15.0"
crossbeam = "0.8.0"
btleplug = "0.5.4"
serde = { version = "1.0.118", features = ["derive"] }
log = "0.4.11"
frank_jwt = "3.1.2"
serde_json = "1.0.60"
chrono = { version = "0.4.19", features = ["serde"] }
paho-mqtt = "0.8.0"
log4rs = "1.0.0"
eui48 = "1.1.0"
serde_yaml = "0.8.14"
ruuvitag-dataformat = { version="0.1.0", path="ruuvitag-dataformat"}
structview = "1.1.0"
