[package]
name = "ruuvi2iotcore"
version = "0.2.6"
authors = ["Antti Peltonen <antti.peltonen@iki.fi>"]
edition = "2018"
description = "Ruuvi tag beacons to GCP iot core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
clap = "3.2.16"
directories = "4.0.1"
dotenv = "0.15.0"
crossbeam = "0.8.1"
btleplug = "^0.5"
serde = { version = "1.0.135", features = ["derive"] }
log = "0.4.14"
frank_jwt = "3.1.2"
serde_json = "1.0.78"
chrono = { version = "0.4.19", features = ["serde"] }
paho-mqtt = { version = "0.9.1", features = [ "bundled", "vendored-ssl" ] }
log4rs = "1.0.0"
eui48 = "1.1.0"
serde_yaml = "0.8.21"
ruuvitag-dataformat = { version="0.1.0", path="ruuvitag-dataformat"}
structview = "1.1.0"

[package.metadata.rpm]
package = "ruuvi2iotcore"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ruuvi2iotcore = { path = "/usr/bin/ruuvi2iotcore" }

[package.metadata.rpm.files]
"LICENSE" = { path = "/usr/share/doc/LICENSE" }
"CHANGELOG.md" = { path = "/usr/share/doc/CHANGELOG.md" }
"log4rs.yaml" = { path = "/usr/share/doc/log4rs.yaml" }
"ruuvi2iotcore.yaml" = { path = "/usr/share/doc/ruuvi2iotcore.yaml" }
"example_gateway_config.json" = { path = "/usr/share/doc/example_gateway_config.json" }
